--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ h1 {
 	background-image: url("../img/hockey.jpg");
 	background-size: cover;
 	margin-bottom: 20px;
+	box-shadow: 5px 5px black;
 }
 
 .tile .nano {
